UI CHANGES MADE TO PRODUCTS

--- a/app/src/main/res/layout/buy_inputs_banner_style_1.xml
+++ b/app/src/main/res/layout/buy_inputs_banner_style_1.xml
@@ -8,14 +8,14 @@
     android:layout_height="@dimen/banner_height">
 
 
-    <com.daimajia.slider.library.SliderLayout
+    <com.glide.slider.library.SliderLayout
         android:id="@+id/banner_slider"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         custom:auto_cycle="true"
         custom:indicator_visibility="visible" />
 
-    <com.daimajia.slider.library.Indicators.PagerIndicator
+    <com.glide.slider.library.indicators.PagerIndicator
         android:id="@+id/banner_slider_indicator"
         style="@style/AndroidImageSlider_Indicator"
         android:layout_width="wrap_content"
@@ -23,8 +23,8 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
-        app:selected_color="@color/colorPrimary"
-        app:unselected_color="@color/windowBackground" />
+        app:unselected_color="@color/colorPrimary"
+        app:selected_color="@color/windowBackground" />
 
 
 </RelativeLayout>
