--- a/app/src/main/res/layout/fragment_card_list.xml
+++ b/app/src/main/res/layout/fragment_card_list.xml
@@ -37,8 +37,8 @@
         app:layout_constraintVertical_bias="0.961"
         app:srcCompat="@drawable/ic_add_white_24dp"
         tools:ignore="VectorDrawableCompat"
-        app:backgroundTint="@color/white"
-        app:tint="@color/colorPrimary"/>
+        app:backgroundTint="@color/colorPrimary"
+        app:tint="@color/white"/>
     <LinearLayout
         android:id="@+id/card_view_empty"
         android:layout_width="match_parent"
