--- a/app/src/main/res/layout/user_summary_details.xml
+++ b/app/src/main/res/layout/user_summary_details.xml
@@ -2,10 +2,8 @@
 
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="25dp"
-    android:layout_marginEnd="25dp"
     android:background="@color/windowBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
