--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -230,6 +230,7 @@
         <item name="padding_right">3dp</item>
         <item name="padding_top">4dp</item>
         <item name="padding_bottom">4dp</item>
+        <item name="android:layout_marginTop">@dimen/dimen_20dp</item>
         <item name="selected_width">10dp</item>
         <item name="selected_height">10dp</item>
         <item name="unselected_width">6dp</item>
@@ -238,6 +239,8 @@
         <item name="selected_padding_right">6dp</item>
         <item name="unselected_padding_left">4dp</item>
         <item name="unselected_padding_right">4dp</item>
+        <item name="selected_color">@color/colorPrimary</item>
+        <item name="unselected_color">@color/white</item>
     </style>
 
     <style name="GlideSliderCardStyle" parent="Base.CardView">
