--- a/app/src/main/res/layout/new_forgot_pin.xml
+++ b/app/src/main/res/layout/new_forgot_pin.xml
@@ -75,6 +75,32 @@
                         android:layout_marginTop="@dimen/margin_15"
                         android:layout_marginEnd="@dimen/dimen_20dp"
                         android:orientation="vertical">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="4dp"
+                                android:text="Phone Number"
+                                android:textSize="@dimen/dimen_16sp"
+                                android:textColor="@color/colorPrimaryDark"/>
+
+
+                            <EditText
+                                android:id="@+id/phone_no"
+                                android:layout_width="match_parent"
+                                android:layout_height="45dp"
+                                android:layout_marginTop="10dp"
+                                android:background="@drawable/rounded_gray_background"
+                                android:fontFamily="@font/josefin_sans"
+                                android:inputType="text"
+                                android:padding="10dp"
+                                android:textColor="#000" />
+                        </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
