--- a/app/src/main/res/layout/buy_inputs_address.xml
+++ b/app/src/main/res/layout/buy_inputs_address.xml
@@ -20,6 +20,7 @@
             android:id="@+id/add_address_Toolbar"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
+            app:navigationIcon="@drawable/ic_chevron_left_white"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -55,24 +56,23 @@
                     android:id="@+id/name"
                     android:layout_width="match_parent"
                     android:layout_height="44dp"
-                    android:background="@drawable/edittext_corner"
+                    android:background="@drawable/outline_primary"
                     android:drawablePadding="15dp"
-                    android:fontFamily="@font/josefin_sans"
                     android:gravity="start|center_vertical"
                     android:hint="@string/Receivername"
                     android:inputType="textNoSuggestions"
                     android:paddingStart="15dp"
                     android:paddingEnd="15dp"
                     android:textAlignment="viewStart"
-                    android:textColor="@color/textColorSecondary"
-                    android:textColorHint="@color/textColorPrimaryLight" />
+                    android:textColor="@color/textColorPrimaryLight"
+                    android:textColorHint="@color/textColorPrimaryDark" />
 
                 <EditText
                     android:id="@+id/contact"
                     android:layout_width="match_parent"
                     android:layout_height="44dp"
                     android:layout_marginTop="@dimen/input_field_margin"
-                    android:background="@drawable/edittext_corner"
+                    android:background="@drawable/outline_primary"
                     android:drawablePadding="15dp"
                     android:fontFamily="@font/josefin_sans"
                     android:gravity="start|center_vertical"
@@ -83,8 +83,8 @@
                     android:paddingEnd="15dp"
                     android:maxLength="10"
                     android:textAlignment="viewStart"
-                    android:textColor="@color/textColorSecondary"
-                    android:textColorHint="@color/textColorPrimaryLight" />
+                    android:textColor="@color/textColorPrimaryLight"
+                    android:textColorHint="@color/textColorPrimaryDark" />
 
             </LinearLayout>
 
