--- a/app/src/main/res/layout/new_forgot_pin.xml
+++ b/app/src/main/res/layout/new_forgot_pin.xml
@@ -88,23 +88,47 @@
                                 android:text="Phone Number"
                                 android:textSize="@dimen/dimen_16sp"
                                 android:textColor="@color/colorPrimaryDark"/>
-
-
-                            <EditText
-                                android:id="@+id/phone_no"
+                            <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="45dp"
-                                android:layout_marginTop="10dp"
+                                android:layout_alignParentTop="true"
                                 android:background="@drawable/rounded_gray_background"
-                                android:fontFamily="@font/josefin_sans"
-                                android:inputType="text"
-                                android:padding="10dp"
-                                android:textColor="#000" />
+                                android:orientation="horizontal">
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="0.1"
+                                    android:background="@drawable/edittext_left_corners_green"
+                                    android:gravity="center"
+                                    android:text="+256"
+                                    android:textStyle="bold"
+                                    android:textColor="@color/gray_mh"
+                                    android:textSize="14sp" />
+
+                                <EditText
+                                    android:id="@+id/phone_no"
+                                    android:layout_width="0dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="0.5"
+                                    android:background="@android:color/transparent"
+                                    android:fontFamily="@font/josefin_sans"
+                                    android:gravity="center_vertical"
+                                    android:inputType="phone"
+                                    android:maxLength="9"
+                                    android:paddingStart="@dimen/dimen_10dp"
+                                    android:paddingLeft="@dimen/dimen_10dp"
+                                    android:tag="+256 "
+                                    android:textColor="@android:color/black"
+                                    android:textColorHint="@android:color/black" />
+                            </LinearLayout>
+
+
                         </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="15dp"
                             android:layout_weight="1"
                             android:orientation="vertical">
 
