UI Changes shop in merchant agent'

--- a/app/src/main/res/layout/cart_product_items.xml
+++ b/app/src/main/res/layout/cart_product_items.xml
@@ -37,7 +37,8 @@
                     android:layout_weight="1"
                     android:contentDescription="TODO"
                     android:scaleType="fitXY"
-                    app:srcCompat="@drawable/new_product" />
+                    app:srcCompat="@drawable/new_product"
+                    tools:ignore="VectorDrawableCompat" />
             </LinearLayout>
 
             <LinearLayout
