--- a/app/src/main/res/layout/fragment_online_order_details.xml
+++ b/app/src/main/res/layout/fragment_online_order_details.xml
@@ -19,6 +19,7 @@
             android:id="@+id/toolbar_orders"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
+            app:navigationIcon="@drawable/ic_chevron_left_white"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -320,6 +321,22 @@
             android:weightSum="4"
             android:layout_margin="15dp">
 
+
+            <TextView
+                android:id="@+id/txt_reject_online"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="2"
+                android:background="@drawable/rectangular_blue_solid"
+                android:fontFamily="@font/josefin_sans"
+                android:gravity="center"
+                android:padding="12dp"
+                android:text="Reject"
+                android:textColor="#fff"
+                android:textSize="16dp"
+                android:textStyle="bold" />
             <TextView
                 android:id="@+id/txt_approve_online"
                 android:layout_width="0dp"
@@ -336,21 +353,6 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/txt_reject_online"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="2"
-                android:background="@drawable/rectangular_red_solid"
-                android:fontFamily="@font/josefin_sans"
-                android:gravity="center"
-                android:padding="12dp"
-                android:text="Reject"
-                android:textColor="#fff"
-                android:textSize="16dp"
-                android:textStyle="bold" />
 
         </LinearLayout>
 
