--- a/app/src/main/res/layout/fragment_shop_pos.xml
+++ b/app/src/main/res/layout/fragment_shop_pos.xml
@@ -30,7 +30,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="40dp"
         android:padding="12dp"
         android:background="@drawable/balance_cards"
         android:visibility="gone">
@@ -233,8 +233,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:layout_marginBottom="?actionBarSize"
         android:background="?android:attr/selectableItemBackground"
         android:visibility="gone"/>
@@ -275,6 +275,112 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
+    <TableLayout
+        android:id="@+id/keyboard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="40dp"
+        android:layout_gravity="bottom"
+        android:divider="@drawable/keyboard_divider"
+        android:visibility="gone">
 
+        <TableRow style="@style/keyboard_row">
+
+            <TextView
+                android:id="@+id/tv_key_1"
+                style="@style/keyboard_number_button"
+                android:alpha=".56"
+                android:text="@string/number_one"
+                android:textColor="#123365" />
+
+            <TextView
+                android:id="@+id/tv_key_2"
+                style="@style/keyboard_number_button"
+                android:alpha=".56"
+                android:text="@string/number_two"
+                android:textColor="#123365" />
+
+            <TextView
+                android:id="@+id/tv_key_3"
+                style="@style/keyboard_number_button"
+                android:alpha=".56"
+                android:text="@string/number_three"
+                android:textColor="#123365" />
+        </TableRow>
+
+        <TableRow style="@style/keyboard_row">
+
+            <TextView
+                android:id="@+id/tv_key_4"
+                style="@style/keyboard_number_button"
+                android:alpha=".56"
+                android:text="@string/number_four"
+                android:textColor="#123365" />
+
+            <TextView
+                android:id="@+id/tv_key_5"
+                style="@style/keyboard_number_button"
+                android:alpha=".56"
+                android:text="@string/number_five"
+                android:textColor="#123365" />
+
+            <TextView
+                android:id="@+id/tv_key_6"
+                style="@style/keyboard_number_button"
+                android:alpha=".56"
+                android:text="@string/number_six"
+                android:textColor="#123365" />
+        </TableRow>
+
+        <TableRow style="@style/keyboard_row">
+
+            <TextView
+                android:id="@+id/tv_key_7"
+                style="@style/keyboard_number_button"
+                android:alpha=".56"
+                android:text="@string/number_seven"
+                android:textColor="#123365" />
+
+            <TextView
+                android:id="@+id/tv_key_8"
+                style="@style/keyboard_number_button"
+                android:alpha=".56"
+                android:text="@string/number_eight"
+                android:textColor="#123365" />
+
+            <TextView
+                android:id="@+id/tv_key_9"
+                style="@style/keyboard_number_button"
+                android:alpha=".56"
+                android:text="@string/number_nine"
+                android:textColor="#123365" />
+        </TableRow>
+
+        <TableRow style="@style/keyboard_row">
+
+            <TextView
+                android:id="@+id/tv_key_clear"
+                style="@style/keyboard_button"
+                android:text="@string/btn_clear"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#2D84B7" />
+
+            <TextView
+                android:id="@+id/tv_key_0"
+                style="@style/keyboard_number_button"
+                android:alpha=".56"
+                android:text="@string/number_zero"
+                android:textColor="#123365" />
+
+            <ImageView
+                android:id="@+id/tv_key_backspace"
+                style="@style/keyboard_button"
+                android:src="@android:drawable/ic_input_delete"
+                android:text="@string/btn_backspace"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                app:tint="#2D84B7" />
+        </TableRow>
+    </TableLayout>
 </LinearLayout>
 </layout>
