--- a/app/src/main/res/layout/new_scan_pay_floating_button.xml
+++ b/app/src/main/res/layout/new_scan_pay_floating_button.xml
@@ -45,6 +45,6 @@
         android:src="@drawable/ic_cancel_blue"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="?actionBarSize"/>
 
 </RelativeLayout>
