--- a/app/src/main/res/layout/order_sales_item.xml
+++ b/app/src/main/res/layout/order_sales_item.xml
@@ -44,7 +44,8 @@
                     android:layout_weight="1"
                     android:contentDescription="@string/todo"
                     android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/new_product" />
+                    app:srcCompat="@drawable/new_product"
+                    tools:ignore="VectorDrawableCompat" />
             </LinearLayout>
 
             <LinearLayout
@@ -169,7 +170,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".5"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="match_parent"
