--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -58,7 +58,8 @@
                             android:layout_height="match_parent"
                             android:contentDescription="TODO"
                             android:scaleType="centerCrop"
-                            app:srcCompat="@drawable/new_product" />
+                            app:srcCompat="@drawable/new_product"
+                            tools:ignore="VectorDrawableCompat" />
 
 
                     </LinearLayout>
@@ -76,11 +77,10 @@
                         android:id="@+id/txt_product_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/josefin_sans"
                         android:hint="@string/product_name"
                         android:text="@{productData.product_name}"
                         android:layout_marginBottom="4dp"
-                        android:textColor="#31244A"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="18sp"
                         android:textStyle="bold"/>
 
@@ -135,10 +135,9 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1.3"
-                            android:fontFamily="@font/josefin_sans"
                             android:hint="@string/category"
                             android:text="@{productData.product_category}"
-                            android:textColor="#B9B9B9"
+                            android:textColor="#9A9999"
                             android:textSize="14sp"/>
 
                     </LinearLayout>
@@ -152,19 +151,17 @@
                             android:id="@+id/txt_product_stock"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/josefin_sans"
                             android:text="In stock :"
-                            android:textColor="#B9B9B9"
+                            android:textColor="#9A9999"
                             android:textSize="14sp" />
 
                         <TextView
                             android:id="@+id/txt_product_stock_value"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/josefin_sans"
                             android:hint="@string/stock_value"
                             android:text="@{productData.product_stock}"
-                            android:textColor="#B9B9B9"
+                            android:textColor="#9A9999"
                             android:textSize="14sp"
                             android:layout_marginStart="5dp"/>
                         <TextView
@@ -190,18 +187,16 @@
                             android:id="@+id/txt_product_sell_price_value"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/josefin_sans"
                             android:hint="@string/buy_sell_value"
                             android:text="@{productData.product_buy_price}"
-                            android:textColor="#B9B9B9"
+                            android:textColor="#9A9999"
                             android:textSize="14sp"/>
                         <TextView
                             android:id="@+id/txt_per_unit"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/josefin_sans"
                             android:text="/Pc"
-                            android:textColor="#B9B9B9"
+                            android:textColor="#9A9999"
                             android:textSize="14sp"
                             android:layout_marginStart="5dp"/>
 
