--- a/app/src/main/res/layout/new_fragment_wallet_account.xml
+++ b/app/src/main/res/layout/new_fragment_wallet_account.xml
@@ -76,17 +76,16 @@
                     <androidx.cardview.widget.CardView
                         android:id="@+id/personal_info_img"
                         android:layout_width="97dp"
-                        android:layout_height="100dp"
+                        android:layout_height="107dp"
                         android:layout_alignParentTop="true"
                         android:layout_alignParentStart="true"
-                        android:padding="10dp"
                         app:cardCornerRadius="10dp"
                         app:cardElevation="0dp">
                         <ImageView
                             android:id="@+id/user_image"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/user"
+                            android:src="@drawable/ic_rectangle_profile_place_holder"
                             android:scaleType="centerCrop"/>
                     </androidx.cardview.widget.CardView>
 
