--- a/app/src/main/res/layout/wallet_home.xml
+++ b/app/src/main/res/layout/wallet_home.xml
@@ -71,10 +71,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            app:fabCustomSize="80dp"
-            app:fabSize="auto"
-            android:src="@drawable/ic_qr_code"
-            tools:ignore="VectorDrawableCompat"
+            app:fabCustomSize="75dp"
+            android:padding="0dp"
+            app:maxImageSize="45dp"
+            android:src="@drawable/scan_white_bg"
             app:layout_anchor="@id/bottomAppBar"
             app:layout_anchorGravity="top|center"
             app:backgroundTint="@color/white"
