--- a/app/src/main/res/layout/layout_scan_and_pay_process_step_2.xml
+++ b/app/src/main/res/layout/layout_scan_and_pay_process_step_2.xml
@@ -1,3 +1,5 @@
+
+<layout>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -344,3 +346,4 @@
     </TableLayout>
     </RelativeLayout>
 </RelativeLayout>
+</layout>
