--- a/app/src/main/res/layout/fragment_shop_pos.xml
+++ b/app/src/main/res/layout/fragment_shop_pos.xml
@@ -104,7 +104,7 @@
         android:layout_marginBottom="60dp">
 
 
-    <EditText
+    <TextView
         android:id="@+id/pos_charge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
