--- a/app/src/main/res/layout/dialog_agent_customer_withdraw.xml
+++ b/app/src/main/res/layout/dialog_agent_customer_withdraw.xml
@@ -65,7 +65,8 @@
                 android:orientation="vertical"
                 android:layout_weight="1"
                 android:layout_marginTop="15dp"
-                android:layout_marginBottom="10dp">
+                android:layout_marginBottom="10dp"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -113,7 +114,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:orientation="vertical"
-                android:visibility="gone">
+                >
 
                 <TextView
                     android:id="@+id/text_customer_number"
@@ -360,6 +361,7 @@
                 android:layout_marginTop="@dimen/margin_10"
                 android:layout_marginRight="@dimen/margin_10"
                 android:layout_marginBottom="5dp"
+                android:id="@+id/layout_withdraw_submit"
                 android:background="@drawable/rounded_corners_button"
                 android:gravity="right">
 
